--- a/packages/freya/package.json
+++ b/packages/freya/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hipcamglobal/freya",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Leandro <leandro.bernardi@hipcamglobal.com>",
@@ -23,9 +23,9 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@hipcamglobal/freya-button": "^0.0.0"
+    "@hipcamglobal/freya-button": "^1.0.0-alpha.0"
   },
   "devDependencies": {
-    "@hipcamglobal/freya-builder": "^0.0.0"
+    "@hipcamglobal/freya-builder": "^1.0.0-alpha.0"
   }
 }
