--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "hoist": true,
   "stream": true,
   "bootstrap": {
