--- a/lerna.json
+++ b/lerna.json
@@ -2,12 +2,6 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.0.0",
-  "hoist": true,
-  "stream": true,
-  "bootstrap": {
-    "npmClientArgs": [
-      "--no-package-lock"
-    ]
-  }
+  "npmClient": "yarn",
+  "version": "0.0.0"
 }
