--- a/package.json
+++ b/package.json
@@ -1,30 +1,15 @@
 {
-  "name": "freya",
+  "name": "building-monorepos-using-lerna",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "lerna run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "deploy": "npm run build-storybook && gh-pages -d storybook-static"
-  },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@storybook/addon-actions": "^6.0.22",
-    "@storybook/addon-essentials": "^6.0.22",
-    "@storybook/addon-links": "^6.0.22",
-    "@storybook/react": "^6.0.22",
-    "babel-loader": "^8.1.0",
-    "lerna": "^3.22.1",
-    "react-is": "^16.13.1"
+  "author": "nirmalya.email@gmail.com",
+  "license": "MIT",
+  "description": "Sample application which shows how to build monorepos using Lerna",
+  "scripts": {
+    "storybook": "npm run storybook --prefix packages/components"
+
   },
-  "dependencies": {
-    "eslint": "^7.10.0",
-    "prettier": "^2.1.2"
+  "devDependencies": {
+    "lerna": "^3.20.2"
   }
 }
