--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hipcamglobal/freya",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "React.js components library",
   "author": "Nirmalya Ghosh <nirmalya.email@gmail.com>",
   "license": "MIT",
