--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
     "dev": "microbundle watch --jsx React.createElement lib/*.js",
+    "build": "microbundle --external='react,react-dom' --jsx React.createElement lib/*.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -33,6 +34,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "css-loader": "^4.3.0",
+    "node-sass": "^4.14.1",
     "react-helmet": "^6.1.0",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
